Use --add-opens because of reflective access.